# GEO1004A1

./: CMakeLists.txt  README.md  hw1.cpp  hw1_viktor.cpp
